// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NPM package > export \`abstract/loadFileUploaderFrom.js\` should match snapshot > abstract/loadFileUploaderFrom.js 1`] = `
{
  "UC_WINDOW_KEY": "UC",
  "loadFileUploaderFrom": [Function],
}
`;

exports[`NPM package > export \`env\` should match snapshot > env 1`] = `
{
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/file-uploader.iife.min.js 1`] = `{}`;

exports[`NPM package > exports \`web\` should match snapshot > web/file-uploader.min.js 1`] = `
{
  "ActivityHeader": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "DropArea": [Function],
  "DropDown": [Function],
  "DynamicBtn": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorIcon": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "ONEDRIVE": "onedrive",
  },
  "FileActionButton": [Function],
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "NoWrapModeDynamicBtn": [Function],
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PluginActivityHost": [Function],
  "PluginActivityRenderer": [Function],
  "PresenceToggle": [Function],
  "PrimaryAction": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "DROP_AREA": "drop-area",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
  },
  "Uploader": [Function],
  "UrlSource": [Function],
  "defineComponents": [Function],
  "defineLocale": [Function],
  "loadFileUploaderFrom": [Function],
  "toKebabCase": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-basic.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-cloud-image-editor.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-cloud-image-editor.min.js 1`] = `
{
  "BtnUi": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "CropFrame": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorIcon": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "LineLoaderUi": [Function],
  "PresenceToggle": [Function],
  "SliderUi": [Function],
  "defineComponents": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-inline.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-inline.min.js 1`] = `
{
  "ActivityHeader": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "DropArea": [Function],
  "DropDown": [Function],
  "DynamicBtn": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorIcon": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "ONEDRIVE": "onedrive",
  },
  "FileActionButton": [Function],
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "NoWrapModeDynamicBtn": [Function],
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PluginActivityHost": [Function],
  "PluginActivityRenderer": [Function],
  "PresenceToggle": [Function],
  "PrimaryAction": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "DROP_AREA": "drop-area",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
  },
  "Uploader": [Function],
  "UrlSource": [Function],
  "defineComponents": [Function],
  "defineLocale": [Function],
  "loadFileUploaderFrom": [Function],
  "toKebabCase": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-minimal.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-minimal.min.js 1`] = `
{
  "ActivityHeader": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "DropArea": [Function],
  "DropDown": [Function],
  "DynamicBtn": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorIcon": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "ONEDRIVE": "onedrive",
  },
  "FileActionButton": [Function],
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "NoWrapModeDynamicBtn": [Function],
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PluginActivityHost": [Function],
  "PluginActivityRenderer": [Function],
  "PresenceToggle": [Function],
  "PrimaryAction": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "DROP_AREA": "drop-area",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
  },
  "Uploader": [Function],
  "UrlSource": [Function],
  "defineComponents": [Function],
  "defineLocale": [Function],
  "loadFileUploaderFrom": [Function],
  "toKebabCase": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-regular.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-regular.min.js 1`] = `
{
  "ActivityHeader": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "DropArea": [Function],
  "DropDown": [Function],
  "DynamicBtn": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorIcon": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "ONEDRIVE": "onedrive",
  },
  "FileActionButton": [Function],
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "NoWrapModeDynamicBtn": [Function],
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PluginActivityHost": [Function],
  "PluginActivityRenderer": [Function],
  "PresenceToggle": [Function],
  "PrimaryAction": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "DROP_AREA": "drop-area",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
  },
  "Uploader": [Function],
  "UrlSource": [Function],
  "defineComponents": [Function],
  "defineLocale": [Function],
  "loadFileUploaderFrom": [Function],
  "toKebabCase": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-img.min.js 1`] = `
{
  "Img": [Function],
}
`;

exports[`NPM package > root ssr stubs export should match snapshot > root export 1`] = `
{
  "ActivityHeader": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "DropArea": [Function],
  "DropDown": [Function],
  "DynamicBtn": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorIcon": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "ONEDRIVE": "onedrive",
  },
  "FileActionButton": [Function],
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "IS_SSR_STUBS": true,
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "NoWrapModeDynamicBtn": [Function],
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PluginActivityHost": [Function],
  "PluginActivityRenderer": [Function],
  "PresenceToggle": [Function],
  "PrimaryAction": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DROPBOX": "dropbox",
    "DROPBOX_CHOOSER": "dropboxchooser",
    "DROP_AREA": "drop-area",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
  },
  "Uploader": [Function],
  "UrlSource": [Function],
  "defineComponents": [Function],
  "defineLocale": [Function],
  "loadFileUploaderFrom": [Function],
  "toKebabCase": [Function],
}
`;
